# chessvm-rs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
chessvm/: Cargo.toml
chessvm-cli/: Cargo.toml
chessvm/src/: lib.rs
chessvm/src/api/: chain_handlers.rs  static_handlers.rs
chessvm/src/block/: mod.rs
chessvm/src/block/tx/: mod.rs
chessvm/src/client/: mod.rs
chessvm/src/genesis/: mod.rs
chessvm/src/state/: mod.rs
chessvm/src/vm/: mod.rs
scripts/: build.release.sh
tests/e2e/: Cargo.toml
tests/e2e/src/tests/: mod.rs
