[package]
name = "chessvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-types = { version = "0.1.4", features = ["subnet", "codec_base64"] } # https://crates.io/crates/avalanche-types
base64 = { version = "0.21.5" }
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.4.11", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
derivative = "2.2.0"
dyn-clone = "1.0.16"
env_logger = "0.10.1"
http-manager = { version = "0.0.14" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"
log = "0.4.19"
semver = "1.0.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108" # https://github.com/serde-rs/json/releases
serde_with = { version = "3.4.0", features = ["hex"] }
tokio = { version = "1.35.0", features = ["fs", "rt-multi-thread"] }
tonic = { version = "0.10.2", features = ["gzip"] }
typetag = "0.2.15"
shakmaty = "0.26.0"
alloy-primitives = { versiom = "0.5.4", features = ["serde"]}




