[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
avalanche-installer = "0.0.77"
avalanche-network-runner-sdk = "0.3.3" # https://crates.io/crates/avalanche-network-runner-sdk
avalanche-types = { version = "0.1.4", features = ["jsonrpc_client", "subnet"] } # https://crates.io/crates/avalanche-types
env_logger = "0.10.1"
log = "0.4.19"
chessvm = { path = "../../chessvm" }
tokio = { version = "1.35.0", features = [] }
serde_json = "1.0.108"
random-manager = "0.0.5"
alloy-primitives = { versiom = "0.5.4", features = ["serde"]}
